--- a/business-rules/R28761.md
+++ b/business-rules/R28761.md
@@ -21,15 +21,24 @@ erp.entity: Finance.Accounting.AccountingVouchers
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Modify**           | NO                                                                                            |
 +----------------------+-----------------------------------------------------------------------------------------------+
-| **Action**           | if (AccountingVoucherLine.Currency == EnterpriseCompany.BaseCurrency)                         |
+| **Action**           | if (AccountingVoucherLine.Currency == EnterpriseCompany.BaseCurrency                          |
+|                      | && Config.AllowBaseCurrencyLineAmountMismatch = False)                                        |
 |                      | <br/><br/>                                                                                    |
 |                      | Debit = DebitBase                                                                             |
 |                      | <br/><br/>                                                                                    |
 |                      | Credit = CreditBase                                                                           |
+|                      | <br/><br/>                                                                                    |
+|                      | if (AccountingVoucherLine.Currency == EnterpriseCompany.BaseCurrency                          |
+|                      | && Config.AllowBaseCurrencyLineAmountMismatch = True)                                         |
+|                      | <br/><br/>                                                                                    |
+|                      | Debit != DebitBase                                                                            |
+|                      | <br/><br/>                                                                                    |
+|                      | Credit != CreditBase                                                                          |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Description**      | If the currency in the particular voucher line is the base currency, then the amount in Debit |
 |                      | must be the same as the amount in Debit Base and also then the amount in Credit must be the   |
 |                      | same as the amount in Credit Base                                                             |
+|                      | (only when config option AllowBaseCurrencyLineAmountMismatch is false )                       |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Message**          | In line number {LineNo} of document {DocumentText} there is difference between the amounts in |
 |                      | Debit and Debit Base or Credit and Credit Base.                                               |
@@ -42,7 +51,9 @@ erp.entity: Finance.Accounting.AccountingVouchers
 |                      | *Sort Messages By Attribute: LineNo*                                                          |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Introduced In      | 2019.1                                                                                        |
-| Version**            |                                                                                               |
+| Version**            | Updated 26.1 - If the config option AllowBaseCurrencyLineAmountMismatch is false —            |
+|                      | i.e. do not allow differences                                                                 |
+|                      | between the amounts in Debit/DebitBase and Credit/CreditBase when Currency == BaseCurrency.   |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Revocable**        | YES                                                                                           |
 +----------------------+-----------------------------------------------------------------------------------------------+
