--- a/business-rules/R33718.md
+++ b/business-rules/R33718.md
@@ -16,7 +16,7 @@ erp.entity: General.Documents.Documents
 | Priority | Late |
 | Modify | NO |
 | Action | If (Document.State >= Planned) Then <br/> <br/> (Notify all implicit followers) |
-| Description| When the document state changes to **Planned+**, all users following at least one of the document's references (e.g. the [EnterpriseCompany](../entities/General.Documents.md#enterprisecompany) the [DocumentType](../entities/General.Documents.md#documenttype), the [Customer](../entities/Crm.Sales.SalesOrders.md#customer) for a SalesOrder, etc.) will receive a notification. |
+| Description| When the document state changes to **Planned+**, all users following at least one of the document's references (e.g. the [EnterpriseCompany](../entities/General.Documents.md#enterprisecompany) the [DocumentType](../entities/General.Documents.md#documenttype), the [Customer](../entities/Crm.Sales.SalesOrders.md#customer) for a SalesOrder, etc.) will receive a notification of class NT_DOC_STATE_IMPLICIT|
 | Message | {0} state has been changed to '{1}'. <br/><br/> You are notified, because you follow {2}. |
 | Version | Introduced: 2023 |
 | Revocable | NO |
