--- a/business-rules/R28761.md
+++ b/business-rules/R28761.md
@@ -22,21 +22,14 @@ erp.entity: Finance.Accounting.AccountingVouchers
 | **Modify**           | NO                                                                                            |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Action**           | if (AccountingVoucherLine.Currency == EnterpriseCompany.BaseCurrency                          |
-|                      | && Config.AllowBaseCurrencyLineAmountMismatch = False)                                        |
+|                      | && Config./Accounting/AccountingVoucherLines/AllowBaseCurrencyLineAmountMismatch != 1   )     |
 |                      | <br/><br/>                                                                                    |
 |                      | Debit = DebitBase                                                                             |
 |                      | <br/><br/>                                                                                    |
 |                      | Credit = CreditBase                                                                           |
-|                      | <br/><br/>                                                                                    |
-|                      | if (AccountingVoucherLine.Currency == EnterpriseCompany.BaseCurrency                          |
-|                      | && Config.AllowBaseCurrencyLineAmountMismatch = True)                                         |
-|                      | <br/><br/>                                                                                    |
-|                      | Debit != DebitBase                                                                            |
-|                      | <br/><br/>                                                                                    |
-|                      | Credit != CreditBase                                                                          |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Description**      | If the currency in the particular voucher line is the base currency, then the amount in Debit |
-|                      | must be the same as the amount in Debit Base and also then the amount in Credit must be the   |
+|                      | must be the same as the amount in Debit Base, and also then the amount in Credit must be the   |
 |                      | same as the amount in Credit Base                                                             |
 |                      | (only when config option AllowBaseCurrencyLineAmountMismatch is false )                       |
 +----------------------+-----------------------------------------------------------------------------------------------+
@@ -50,10 +43,10 @@ erp.entity: Finance.Accounting.AccountingVouchers
 |                      | <br/><br/>                                                                                    |
 |                      | *Sort Messages By Attribute: LineNo*                                                          |
 +----------------------+-----------------------------------------------------------------------------------------------+
-| **Introduced In      | 2019.1                                                                                        |
-| Version**            | Updated 26.1 - If the config option AllowBaseCurrencyLineAmountMismatch is false —            |
-|                      | i.e. do not allow differences                                                                 |
-|                      | between the amounts in Debit/DebitBase and Credit/CreditBase when Currency == BaseCurrency.   |
+| **Version**          | Introduced: 2019.1                                                                            |
+|                      | Updated: 26.1 - Added condition by the config option                                          |
+|                      | /Accounting/AccountingVoucherLines/AllowBaseCurrencyLineAmountMismatch. If its value          |
+|                      | is equal to 1, then the validation is not performed.                                          |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Revocable**        | YES                                                                                           |
 +----------------------+-----------------------------------------------------------------------------------------------+
