--- a/business-rules/R28761.md
+++ b/business-rules/R28761.md
@@ -21,17 +21,15 @@ erp.entity: Finance.Accounting.AccountingVouchers
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Modify**           | NO                                                                                            |
 +----------------------+-----------------------------------------------------------------------------------------------+
-| **Action**           | if (AccountingVoucherLine.Currency == EnterpriseCompany.BaseCurrency                          |
-|                      | && Config./Accounting/AccountingVoucherLines/AllowBaseCurrencyLineAmountMismatch != 1   )     |
+| **Action**           | if (AccountingVoucherLine.Currency == EnterpriseCompany.BaseCurrency)                         |
 |                      | <br/><br/>                                                                                    |
 |                      | Debit = DebitBase                                                                             |
 |                      | <br/><br/>                                                                                    |
 |                      | Credit = CreditBase                                                                           |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Description**      | If the currency in the particular voucher line is the base currency, then the amount in Debit |
-|                      | must be the same as the amount in Debit Base, and also then the amount in Credit must be the   |
+|                      | must be the same as the amount in Debit Base, and also then the amount in Credit must be the  |
 |                      | same as the amount in Credit Base                                                             |
-|                      | (only when config option AllowBaseCurrencyLineAmountMismatch is false )                       |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Message**          | In line number {LineNo} of document {DocumentText} there is difference between the amounts in |
 |                      | Debit and Debit Base or Credit and Credit Base.                                               |
@@ -44,9 +42,6 @@ erp.entity: Finance.Accounting.AccountingVouchers
 |                      | *Sort Messages By Attribute: LineNo*                                                          |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Version**          | Introduced: 2019.1                                                                            |
-|                      | Updated: 26.1 - Added condition by the config option                                          |
-|                      | /Accounting/AccountingVoucherLines/AllowBaseCurrencyLineAmountMismatch. If its value          |
-|                      | is equal to 1, then the validation is not performed.                                          |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Revocable**        | YES                                                                                           |
 +----------------------+-----------------------------------------------------------------------------------------------+
