--- a/generations/CRM1002.md
+++ b/generations/CRM1002.md
@@ -26,19 +26,14 @@ erp.type: generation
 
 The current generation procedure is meant to create template offers from a Deal.
 
-To create an offer, the customer has to be specified. The customer is extracted from the party, selected in the Deal - Deal.Party - and the up to date customer definition of this party in the enterprise company of the offer - Offer.EnterpriseCompany(so Customer.Party = Deal.Party && Customer.EnterpriseCompany == Offer.EnterpriseCompany). 
-If no such customer is found, the generation procedure is stopped and an error is thrown. The error text is:
-
-```
- Party '{Deal.Party.PartyName}' is not defined as customer for enterprise company '{Deal.EnterpriseCompany.Party.PartyName}'. 
- In order to create an offer the party has to be defined as customer for enterprise company '{Deal.EnterpriseCompany.Party.PartyName}'.
- ```
-
 **The fields in the Offer’s header are filled as follows:**
 
 ```
 Offer.DocumentDate = Deal.DocumentDate
-Offer.Customer = the determined Customer for the Deal.Party
+Offer.Customer = 
+if (Count(Customers, where Party == Deal.Party && (EnterpriseCompany == Offer.EnterpriseCompany || EnterpriseCompany == null) && Active == True) > 0)
+, then Customer = the determined Customer for the Deal.Party
+, else Customer = null
 Offer.DocumentCurrency = Offer.EnterpriseCompany.BaseCurrency 
 Offer.Deal = Deal 
 Offer.SalesPerson = Deal.LeadingSalesPerson
