--- a/generations/CRM1002.md
+++ b/generations/CRM1002.md
@@ -37,10 +37,10 @@ if (Count(Customers, where Party == Deal.Party && (EnterpriseCompany == Offer.En
 Offer.DocumentCurrency = Offer.EnterpriseCompany.BaseCurrency 
 Offer.Deal = Deal 
 Offer.SalesPerson = Deal.LeadingSalesPerson
-Offer.RequiredDeliveryDate = DocumentDate + Customer.DefaultDeliveryTermDays
-Offer.PaymentDueDate = DocumentDate + Customer.DefaultPaymentTermDays
-Offer.PriceList = Customer.DefaultPriceList
-Offer.PaymentType = Customer.DefaultPaymentType
+Offer.RequiredDeliveryDate = DocumentDate
+Offer.PaymentDueDate = DocumentDate
+Offer.PriceList = null
+Offer.PaymentType = null
 ```
 
 
