--- a/business-rules/R39040.md
+++ b/business-rules/R39040.md
@@ -17,7 +17,7 @@ erp.entity: Finance.Accounting.AccountingVoucherLines
 | Applicable Legislations | ALL // no condition needed |
 | Action | Validates that: <br> If (Account != null) AND (Account.Currency !=  null) AND (Account.LimitToBaseCurrency = False) THEN (Currency == Account.Currency) <br> If (Account != null) AND (Account.LimitToBaseCurrency = TRUE) THEN (Currency = AccountingVoucher.EnterpriseCompany.BaseCurrency OR AccountingVoucher.EnterpriseCompany.ReportingCurrency) <br> OR If (InstanceChangeRequest.ChangeKind = 'BaseCurrencyChange') AND (InstanceChangeRequest.BaseCurrencyChange = 'Scheduled') THEN (AccountingVoucherLines.Currency = InstanceChangeRequest.NewValueCurrency) |
 | Description| If the Account specified in Voucher Lines does not have the 'Limit to base currency' enabled, then the Currency in the Accounting Voucher Line must match the specified Account Currency (if any). <br> However, if the 'Limit to base currency' is enabled, then the Currency used in the Accounting Voucher Line must be either the Enterprise Company's Base Currency, Reporting Currency or if there is a record of Instance Change Request where the ChangeKind is ‘BaseCurrencyChange’ and its state is ‘Scheduled’ then Currency can be equal to the New Value Currency. |
-| Message | The selected Currency is invalid. <br/> This account allows only '{Account.Currency}' or, if limited to base currency, the enterprise company's Base '{AccountingVoucher.EnterpriseCompany.BaseCurrency}', Reporting '{AccountingVoucher.EnterpriseCompany.ReportingCurrency}' currency or New Value Currency ‘{InstanceChangeRequest.NewValueCurrency}’. <br/> Please select a valid currency. |
+| Message | Error 1: The allowed currencies are either the Account currency ‘{Account.Currency}’ or the Base currency ‘{AccountingVoucher.EnterpriseCompany.BaseCurrency}’. <br> Error 2: The allowed currencies are the Account currency ‘{Account.Currency}’, Base currency ‘{AccountingVoucher.EnterpriseCompany.BaseCurrency}’ or Reporting currency '{AccountingVoucher.EnterpriseCompany.ReportingCurrency}'. <br> Error 3: The allowed currencies are the Account currency ‘{Account.Currency}’, Base currency ‘{AccountingVoucher.EnterpriseCompany.BaseCurrency}’, Reporting currency '{AccountingVoucher.EnterpriseCompany.ReportingCurrency}' or New Value Currency '{InstanceChangeRequest.NewValueCurrency}'. <br> Error 4: The allowed currencies are the Account currency ‘{Account.Currency}’, Base currency ‘{AccountingVoucher.EnterpriseCompany.BaseCurrency}’ or New Value Currency '{InstanceChangeRequest.NewValueCurrency}'. |
 | Version | Introduced: 2026 |
 | Revocable | YES |
 
