--- a/business-rules/R39281.md
+++ b/business-rules/R39281.md
@@ -3,7 +3,7 @@ erp_type: business-rule
 erp_entity: Crm.Presales.Offers  
 ---
 
-# R39281 - Offers - Set Customer From To Party
+# R39281 Offers - Set Customer From To Party
 +------------------+------------------------------------------------------------------------------------------------+
 | **Code**         | R39281                                                                                         |
 +------------------+------------------------------------------------------------------------------------------------+
