--- a/business-rules/R39281.md
+++ b/business-rules/R39281.md
@@ -1,6 +1,6 @@
 ---
-erp_type: business-rule  
-erp_entity: Crm.Presales.Offers  
+erp.type: business-rule  
+erp.entity: Crm.Presales.Offers  
 ---
 
 # R39281 Offers - Set Customer From To Party
