--- a/business-rules/R39281.md
+++ b/business-rules/R39281.md
@@ -21,7 +21,7 @@ erp.entity: Crm.Presales.Offers
 +------------------+------------------------------------------------------------------------------------------------+
 | **Modify**       | YES                                                                                            |
 +------------------+------------------------------------------------------------------------------------------------+
-| **Action**       | If (Customer == NULL):<br>                                                                     |
+| **Action**       | If (Customer == NULL) && (ToParty != NULL):<br>                                                |
 |                  | - Create a new Customer record where:<br>                                                      |
 |                  |   • Party = Offer.ToParty<br>                                                                  |
 |                  |   • Customer.FromDate = TODAY<br>                                                              |
