--- a/generations/CRM1002.md
+++ b/generations/CRM1002.md
@@ -43,15 +43,15 @@ Offer.RequiredDeliveryDate =
                             else DocumentDate
 Offer.PaymentDueDate =
                             if(Offer.Customer != NULL)
-                            , DocumentDate + Customer.DefaultPaymentTermDays
+                            , then DocumentDate + Customer.DefaultPaymentTermDays
                             else DocumentDate
 Offer.PriceList =
                            if(Offer.Customer != NULL)
-                            , Customer.DefaultPriceList
+                            , then Customer.DefaultPriceList
                             else NULL
 Offer.PaymentType =
                             if(Offer.Customer != NULL)
-                            , Customer.DefaultPaymentType
+                            , then Customer.DefaultPaymentType
                             else NULL
 ```
 
