--- a/generations/CRM1002.md
+++ b/generations/CRM1002.md
@@ -38,21 +38,21 @@ Offer.DocumentCurrency = Offer.EnterpriseCompany.BaseCurrency
 Offer.Deal = Deal 
 Offer.SalesPerson = Deal.LeadingSalesPerson
 Offer.RequiredDeliveryDate =
-                            if(Offer.Customer != NULL)
+                            if(Offer.Customer != null)
                             , then DocumentDate + Customer.DefaultDeliveryTermDays
                             else DocumentDate
 Offer.PaymentDueDate =
-                            if(Offer.Customer != NULL)
+                            if(Offer.Customer != null)
                             , then DocumentDate + Customer.DefaultPaymentTermDays
                             else DocumentDate
 Offer.PriceList =
-                           if(Offer.Customer != NULL)
+                           if(Offer.Customer != null)
                             , then Customer.DefaultPriceList
-                            else NULL
+                            else null
 Offer.PaymentType =
-                            if(Offer.Customer != NULL)
+                            if(Offer.Customer != null)
                             , then Customer.DefaultPaymentType
-                            else NULL
+                            else null
 ```
 
 
