--- a/business-rules/R39339.md
+++ b/business-rules/R39339.md
@@ -29,6 +29,7 @@ erp.entity: Crm.Sales.CustomerExternalAccess
 | **Description**             | The rule prevents creating External Access records that cannot be accessed in the     | 
 |                             | Client Center. The rule prevents creating External Access records that cannot be      |
 |                             | accessed in the Client Center. It ensures that External Access can be created only    |
+|                             | for customers who have a Serviced By Enterprise Company Location defined.             |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | External access cannot be activated for customer “{Customer.DisplayText}”.            | 
 |                             | The Customer does not have a defined Serviced by Enterprise Company Location.         |  
@@ -36,9 +37,9 @@ erp.entity: Crm.Sales.CustomerExternalAccess
 |                             | Please set a Serviced by Enterprise Company Location in the definition of             | 
 |                             | “{Customer.DisplayText}” before creating an External Access record.                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Version**                 | Introduced: v.                                                                      |
+| **Version**                 | Introduced: v.                                                                        |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Revocable**               | Yes                                                                                    |
+| **Revocable**               | Yes                                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
 
 *\* For more information about the Business Rules Documentation Template and a short explanation of each column, see
