--- a/business-rules/R39339.md
+++ b/business-rules/R39339.md
@@ -29,7 +29,7 @@ erp.entity: Crm.Sales.CustomerExternalAccess
 | **Description**             | The rule prevents creating External Access records that cannot be accessed in the     | 
 |                             | Client Center. The rule prevents creating External Access records that cannot be      |
 |                             | accessed in the Client Center. It ensures that External Access can be created only    |
-|                             | for customers who have a Serviced By Enterprise Company Location defined.             |
+|                             | for Customers who have a Serviced By Enterprise Company Location defined.             |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | External access cannot be activated for customer “{Customer.DisplayText}”.            | 
 |                             | The Customer does not have a defined Serviced by Enterprise Company Location.         |  
