--- a/business-rules/R39339.md
+++ b/business-rules/R39339.md
@@ -27,9 +27,8 @@ erp.entity: Crm.Sales.CustomerExternalAccess
 |                             | that have a Serviced By Enterprise Company Location defined.                          |  
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Description**             | The rule prevents creating External Access records that cannot be accessed in the     | 
-|                             | Client Center. The rule prevents creating External Access records that cannot be      |
-|                             | accessed in the Client Center. It ensures that External Access can be created only    |
-|                             | for Customers who have a Serviced By Enterprise Company Location defined.             |
+|                             | Client Center. It ensures that External Access can be created only for Customers who  |
+|                             |   have a Serviced By Enterprise Company Location defined.                             |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | External access cannot be activated for customer “{Customer.DisplayText}”.            | 
 |                             | The Customer does not have a defined Serviced by Enterprise Company Location.         |  
