--- a/business-rules/39115.md
+++ b/business-rules/39115.md
@@ -19,5 +19,5 @@ erp.entity: Projects.Agile.Cases
 | Action | On assigning a Case to a Social Group, create a new record in Group.Social.Comments on behalf of the System user.|
 | Description| The rule creates a system comment in the group's chat when a Case is assigned to it: "Case 'Case {Case.Number}' was assigned to the group."|
 | Message | - |
-| Introduced |v. |
+| Introduced |v.26.2|
 | Revocable | NO |
