--- a/business-rules/R39354.md
+++ b/business-rules/R39354.md
@@ -11,11 +11,11 @@ erp.entity: Crm.Sales.SalesOrderLines
 | Name | TrueApplyTradeConditionsOnCreate |
 | Attribute | ApplyTradeConditions |
 | Layer | Front-End |
-| Events | Late CREATENEW |
-| Priority | Normal |
+| Events | CREATENEW |
+| Priority | Late |
 | Modify | YES |
 | Applicable Legislations | ALL // no condition needed |
-| Action | |
+| Action | IF SalesOrderLine IS NEW THEN SalesOrderLine.ApplyTradeConditions = TRUE |
 | Description| When a new line is created in 'Sales Order Lines', the rule should always set ApplyTradeConditions = True on the same sales line. |
 | Message | |
 | Version | Introduced: |
