--- a/business-rules/R39281.md
+++ b/business-rules/R39281.md
@@ -22,22 +22,36 @@ erp.entity: Crm.Presales.Offers
 | **Modify**       | YES                                                                                            |
 +------------------+------------------------------------------------------------------------------------------------+
 | **Action**       | If (Customer == NULL) && (ToParty != NULL):<br>                                                |
-|                  | - Create a new Customer record where:<br>                                                      |
-|                  |   • Party = Offer.ToParty<br>                                                                  |
-|                  |   • Customer.FromDate = TODAY<br>                                                              |
-|                  |   • Customer.EnterpriseCompany = Offer.EnterpriseCompany<br>                                   |
-|                  |   • Customer.DefaultCurrency = Offer.EnterpriseCompany.BaseCurrency<br>                        |
-|                  |   • Customer.CreditLimit = Offer.EnterpriseCompany.DefaultCustomerCreditLimitBase<br>          |
-|                  |   • Other customer fields are set to NULL or to their default values<br>                       |
-|                  | - Then set the new Customer to the Offer's Customer field.                                     |
+|                  |    Search for an existing Customer record where:<br>                                           |
+|                  |    • Customer.Party == Offer.ToParty<br>                                                       |
+|                  |    • Customer.IsActive == TRUE<br>                                                             |
+|                  |    • Customer.EnterpriseCompany == Offer.EnterpriseCompany OR Customer.EnterpriseCompany == NULL 
+|                  |    • Customer.FromDate == NULL OR Customer.FromDate <= Offer.DocumentDate<br>                  |
+|                  |    • Customer.ThruDate == NULL OR Customer.ThruDate >= Offer.DocumentDate<br></br>             |
+|                  |   If a matching Customer is found:<br>                                                         |
+|                  |     • Set the first found Customer to the Offer's Customer field.<br></br>                     |
+|                  |   Else:<br>                                                                                    |
+|                  |     • Create a new Customer record where:<br>                                                  |
+|                  |       • Customer.Party == Offer.ToParty<br>                                                    |
+|                  |       • Customer.FromDate = TODAY<br>                                                          |
+|                  |       • Customer.EnterpriseCompany = Offer.EnterpriseCompany<br>                               |
+|                  |       • Customer.DefaultCurrency = Offer.EnterpriseCompany.BaseCurrency<br>                    |
+|                  |       • Customer.CreditLimit = Offer.EnterpriseCompany.DefaultCustomerCreditLimitBase<br>      |
+|                  |       • Customer.IsActive = TRUE<br>                                                           |
+|                  |       • Customer.AllowUseAsPrimaryCustomer = TRUE<br>                                          |
+|                  |       • Customer.AllowUseAsShipToCustomer = FALSE<br>                                          |
+|                  |       • Other customer fields are set to NULL or to their default values<br></br>              |
+|                  |    • Then set the new Customer to the Offer's Customer field                                   |
 +------------------+------------------------------------------------------------------------------------------------+
-| **Description**  | The rule automates the creation and assignment of a Customer when an Offer is approved         |
-|                  | (system state set to Released or higher). It eliminates the need for manual customer creation  |
-|                  | by the user.                                                                                   |
+| **Description**  | The rule checks for an existing valid Customer record based on the Offer’s ToParty and         |
+|                  | EnterpriseCompany when an Offer is approved (system state set to Released or higher).<br>      |
+|                  | If there is an existing valid Customer record, it is assigned to the Offer.<br>                |
+|                  | If no such record is found, a new Customer is created and then assigned to the Offer.<br>      |
+|                  | This eliminates the need for manual customer assignment or creation by the user.               |
 +------------------+------------------------------------------------------------------------------------------------+
 | **Message**      | \-                                                                                             |
 +------------------+------------------------------------------------------------------------------------------------+
-| **Version**      | Introduced:                                                                                    |
+| **Version**      | Introduced: v.26.2                                                                             |
 +------------------+------------------------------------------------------------------------------------------------+
 | **Revocable**    | NO                                                                                             |
 +------------------+------------------------------------------------------------------------------------------------+
