--- a/business-rules/R39281.md
+++ b/business-rules/R39281.md
@@ -21,7 +21,7 @@ erp.entity: Crm.Presales.Offers
 +------------------+------------------------------------------------------------------------------------------------+
 | **Modify**       | YES                                                                                            |
 +------------------+------------------------------------------------------------------------------------------------+
-| **Action**       | If (Customer == NULL) && (ToParty != NULL):<br>                                                |
+| **Action**       | If (Customer == NULL) && (ToParty != NULL):<br></br>                                           |
 |                  |    Search for an existing Customer record where:<br>                                           |
 |                  |    • Customer.Party == Offer.ToParty<br>                                                       |
 |                  |    • Customer.IsActive == TRUE<br>                                                             |
@@ -29,7 +29,7 @@ erp.entity: Crm.Presales.Offers
 |                  |    • Customer.FromDate == NULL OR Customer.FromDate <= Offer.DocumentDate<br>                  |
 |                  |    • Customer.ThruDate == NULL OR Customer.ThruDate >= Offer.DocumentDate<br></br>             |
 |                  |   If a matching Customer is found:<br>                                                         |
-|                  |     • Set the first found Customer to the Offer's Customer field.<br></br>                     |
+|                  |     • Set the first found Customer to the Offer's Customer field.<br>                          |
 |                  |   Else:<br>                                                                                    |
 |                  |     • Create a new Customer record where:<br>                                                  |
 |                  |       • Customer.Party == Offer.ToParty<br>                                                    |
