--- a/business-rules/R39281.md
+++ b/business-rules/R39281.md
@@ -31,7 +31,7 @@ erp.entity: Crm.Presales.Offers
 |                  |   If a matching Customer is found:<br>                                                         |
 |                  |     • Set the first found Customer to the Offer's Customer field.<br>                          |
 |                  |   Else:<br>                                                                                    |
-|                  |     • Create a new Customer record where:<br>                                                  |
+|                  |     • Create a new Customer record where:<br></br>                                             |
 |                  |       • Customer.Party == Offer.ToParty<br>                                                    |
 |                  |       • Customer.FromDate = TODAY<br>                                                          |
 |                  |       • Customer.EnterpriseCompany = Offer.EnterpriseCompany<br>                               |
