--- a/business-rules/R39281.md
+++ b/business-rules/R39281.md
@@ -25,7 +25,7 @@ erp.entity: Crm.Presales.Offers
 |                  |    Search for an existing Customer record where:<br>                                           |
 |                  |    • Customer.Party == Offer.ToParty<br>                                                       |
 |                  |    • Customer.IsActive == TRUE<br>                                                             |
-|                  |    • Customer.EnterpriseCompany == Offer.EnterpriseCompany OR Customer.EnterpriseCompany == NULL 
+|                  |    • Customer.EnterpriseCompany == Offer.EnterpriseCompany OR Customer.EnterpriseCompany == NULL<br> 
 |                  |    • Customer.FromDate == NULL OR Customer.FromDate <= Offer.DocumentDate<br>                  |
 |                  |    • Customer.ThruDate == NULL OR Customer.ThruDate >= Offer.DocumentDate<br></br>             |
 |                  |   If a matching Customer is found:<br>                                                         |
